# Elaina

./: .gitignore  CMakeLists.txt  README.md  build.bat  dist.bat
include/: instance_utils.h  offsets.h
scripts/: example.lua  unctest.lua
src/: exports.cpp  exports.h  http_server.h  winhttp_client.h
src/Core/: dllmain.cpp
src/Core/api/: environment.cpp  environment.h
src/Core/communication/: pipe_server.cpp  pipe_server.h
src/Core/executor/: bytecode.cpp  bytecode.h  executor.cpp  executor.h  luavm.cpp  luavm.h
src/Core/framework/: memory.h  threading.h
src/Core/hooks/: hooks.cpp  hooks.h
src/Core/injector/: injector.cpp  injector.h
src/ElainaUI/: App.xaml  App.xaml.cs  ElainaUI.csproj  MainWindow.xaml  MainWindow.xaml.cs  Theme.xaml
src/ElainaUI/Models/: ExecutionResult.cs  ScriptFile.cs
src/ElainaUI/Services/: PipeClient.cs
src/Launcher/: main.cpp  resource.h
src/api/: Api.cpp  Api.h
src/core/: Log.cpp  Log.h  Result.h
src/execution/: Compiler.cpp  Compiler.h  Encoder.cpp  Encoder.h  Injector.cpp  Injector.h  Payload.h  executor.h  luau_wrapper.h  rsb1_encoder.h  sunc_payload.h  unc_payload.h
src/instance/: InstanceTree.cpp  InstanceTree.h  Offsets.h
src/memory/: instance_walker.h  pattern_scanner.h
src/network/: Proxy.cpp  Proxy.h  Server.cpp  Server.h
src/process/: Memory.cpp  Memory.h  Process.cpp  Process.h  scanner.h
src/service/: ExecutionService.cpp  ExecutionService.h  NetworkService.cpp  NetworkService.h  Session.cpp  Session.h
src/syscall/: Syscall.asm  Syscall.cpp  Syscall.h
src/syscalls/: syscalls.h
ui/: App.xaml  App.xaml.cs  ElainaCore.cs  ElainaUI.csproj  MainWindow.xaml  MainWindow.xaml.cs  app.manifest
